--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,8 +1,7 @@
-name: Deploy to GitHub Pages
-
+name: Website Manual Deploy
 on:
-  push:
-    branches: [main]
+  # manual trigger
+  workflow_dispatch:
 
 permissions:
   contents: write
